<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title">Title</string>
    <string name="price">Price (numbers only)</string>
    <string name="description">Description</string>
    <string name="save_menu">save</string>
    <string name="insert_new_deal">New Travel Deal</string>
    <string name="delete_menu">delete</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="image">Image</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="las_vegas_holiday_resort">Las Vegas Holiday Resort</string>
    <string name="_15000">15000</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="logout">Logout</string>
</resources>
