<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.marwaeltayeb.travelmantics.AdminActivity">

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="16sp"
        android:text="@string/select_image"
        android:layout_margin="10dp"/>
    
    <ImageView
        android:id="@+id/imageTravel"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src="@drawable/image"
        android:contentDescription="@string/image" />
</LinearLayout>
